Mark's fix for the crash, and fixes Rich's observation of items dropped at the top being dynamic enabled.

BUG:141762

svn path=/branches/stable/extragear/multimedia/amarok/; revision=646857